--- a/src/components/GridItem/GridItem.module.css
+++ b/src/components/GridItem/GridItem.module.css
@@ -1,9 +1,9 @@
 .item {
-    border: 2px solid gray;
-    width: 50px;
-    height: 50px;
+    border: 3px solid gray;
+    width: 60px;
+    height: 60px;
     background-color: #fff;
-    color: black;
+    color: #fff;
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -12,9 +12,17 @@
 }
 
 .green {
-    background-color: green;
+    background-color: rgb(65, 122, 65);
 }
 
 .gray {
     background-color: gray;
+}
+
+.red {
+    background-color: red;
+}
+
+.empty {
+    background-color: #fff;
 }
