--- a/src/components/InputReader/InputReader.module.css
+++ b/src/components/InputReader/InputReader.module.css
@@ -1,9 +1,13 @@
 .form {
     display: flex;
     flex-direction: column;
+    position: relative;
+    width: 100%;
 }
 
 .form input {
     text-transform: uppercase;
     padding: .5rem .3rem;
+    width: 100%;
+    display: block
 }
