--- a/src/styles.css
+++ b/src/styles.css
@@ -77,10 +77,10 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: var(--game-spacing);
-  padding: var(--game-spacing) 32px;
+  padding: var(--game-spacing) 0;
   margin: 0 auto;
-  min-width: 250px;
-  max-width: min(500px, 58vh, 100%);
+  min-width: min(250px,70%);
+  max-width: min(500px, 100%);
 }
 
 .guess-results {
